# openai-completions-proxy

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yml
src/: main.rs
