[package]
name = "openai-completions-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.async-openai]
version = "0.41"
features = ["chat-completion", "completions"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "net", "rt-multi-thread"]
